--- a/DiGit/View/AboutView.xaml
+++ b/DiGit/View/AboutView.xaml
@@ -44,6 +44,17 @@
                         <TextBlock Text="{Binding UpdateLink}" />
                     </Hyperlink>
                 </TextBlock>
+
+                <GroupBox Header="Additional Information" Margin="0,16,0,0" >
+                    <StackPanel Orientation="Horizontal" Margin="8">
+                        <TextBlock Text="Data file: "/>
+                        <TextBlock>
+                            <Hyperlink Command="{Binding OpenConfigFolderCommand}" ToolTip="{Binding ConfigFilePathToolTip}">
+                                <TextBlock Text="{Binding ConfigFilePathDisplay}" />
+                            </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
+                </GroupBox>
             </StackPanel>
 
         </Grid>
