--- a/DiGit/View/TipsView.xaml
+++ b/DiGit/View/TipsView.xaml
@@ -36,7 +36,24 @@
                 <XmlDataProvider Source="/Versioning/DiGitVersionInfo.xml" XPath="DiGitVersionInfo" />
             </ScrollViewer.DataContext>
             <StackPanel DockPanel.Dock="Top">
-                <Expander Tag="1.0.212" IsExpanded="True" Header="New in 1.0.212">
+                <Expander Tag="1.0.215" IsExpanded="True" Header="New in 1.0.215">
+                    <StackPanel Margin="30, 6">
+                        <ListView ItemsSource="{Binding XPath=./Version[@version\=\'1.0.215\']/*}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate >
+                                    <BulletDecorator>
+                                        <BulletDecorator.Bullet>
+                                            <Ellipse Height="5" Width="5" Fill="Black" />
+                                        </BulletDecorator.Bullet>
+                                        <TextBlock Text="{Binding XPath=text()}" Margin="8, 0, 0, 0"/>
+                                    </BulletDecorator>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+                </Expander>
+                
+                <Expander Tag="1.0.212" IsExpanded="False" Header="New in 1.0.212">
                     <StackPanel Margin="30, 6">
                         <ListView ItemsSource="{Binding XPath=./Version[@version\=\'1.0.212\']/*}">
                             <ListView.ItemTemplate>
@@ -52,7 +69,6 @@
                         </ListView>
                     </StackPanel>
                 </Expander>
-                
                 
 
                 <Expander Tag="1.0.208" IsExpanded="False" Header="New in 1.0.208">
