Suppress Event Log error message. User server log file name is Name + Username.

--- a/DiGit/View/AboutView.xaml
+++ b/DiGit/View/AboutView.xaml
@@ -39,7 +39,7 @@
                 <TextBlock.ContextMenu>
                     <ContextMenu>
                         <MenuItem x:Name="mnuAddrepo" 
-                              Header="Copy Email Address" 
+                              Header="Copy" 
                               Command="{Binding CopyEmailCommand}"/>
                     </ContextMenu>
                 </TextBlock.ContextMenu>
