--- a/DiGit/View/NotifyIconBalloons/NotifyBalloonView.xaml
+++ b/DiGit/View/NotifyIconBalloons/NotifyBalloonView.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DiGit.View.NotifyIconBalloons"
         xmlns:mui="http://firstfloorsoftware.com/ModernUI"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-        xmlns:ei="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions" 
-        xmlns:Media="clr-namespace:Microsoft.Expression.Interactivity.Media;assembly=Microsoft.Expression.Interactions" 
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:ei="http://schemas.microsoft.com/xaml/behaviors" 
+        xmlns:Media="http://schemas.microsoft.com/xaml/behaviors" 
         Title="DiGit Notification" 
         ShowActivated="True"
         Cursor="{Binding MouseCursor}"
