--- a/DiGit/View/BubbleView.xaml
+++ b/DiGit/View/BubbleView.xaml
@@ -1,7 +1,7 @@
 ﻿<Window  x:Class="DiGit.View.BubbleView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:model="clr-namespace:DiGit.Model"
         Title="BubbleView" Height="200" Width="160" 
         Topmost="True"
@@ -17,7 +17,7 @@
     <Window.Resources>
 
         <ContextMenu Style="{StaticResource ContextMenuCommandsStyleTest}" x:Key="CommandsContextMenu" Opened="CommandsContextMenu_Opened" Closed="CommandsContextMenu_Closed" ItemsSource="{Binding UserCommandList}"/>
-
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter1" />
 
     </Window.Resources>
 
@@ -38,7 +38,7 @@
 
 
         <Border x:Name="MainBorder" 
-            Panel.ZIndex="1"
+            Panel.ZIndex="0"
             Style="{DynamicResource BubbleBorderStyle}" 
             Opacity="{Binding BubbleOpacity, Mode=OneWay}" >
 
@@ -310,6 +310,17 @@
                         </ControlTemplate>
                     </ToggleButton.Template>
                 </ToggleButton>
+
+                <Button HorizontalAlignment="Left" VerticalAlignment="Top" Margin="4" Width="16" Height="16" Cursor="Hand" ToolTip="Update Available"
+                        Command="{Binding ShowUpdateCommand}"
+                        Visibility="{Binding ShowUpdateIcon, Converter={StaticResource BooleanToVisibilityConverter1}, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" >
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Image Source="/Resources/images/update.png" />
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                
             </Grid>
 
 
