--- a/DiGit/View/TipsView.xaml
+++ b/DiGit/View/TipsView.xaml
@@ -36,7 +36,39 @@
                 <XmlDataProvider Source="/Versioning/DiGitVersionInfo.xml" XPath="DiGitVersionInfo" />
             </ScrollViewer.DataContext>
             <StackPanel DockPanel.Dock="Top">
-                <Expander Tag="1.0.219" IsExpanded="True" Header="New in 1.0.219">
+                <Expander Tag="1.0.222" IsExpanded="True" Header="New in 1.0.222">
+                    <StackPanel Margin="30, 6">
+                        <ListView ItemsSource="{Binding XPath=./Version[@version\=\'1.0.222\']/*}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate >
+                                    <BulletDecorator>
+                                        <BulletDecorator.Bullet>
+                                            <Ellipse Height="5" Width="5" Fill="Black" />
+                                        </BulletDecorator.Bullet>
+                                        <TextBlock Text="{Binding XPath=text()}" Margin="8, 0, 0, 0"/>
+                                    </BulletDecorator>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+                </Expander>
+                <Expander Tag="1.0.221" IsExpanded="True" Header="New in 1.0.221">
+                    <StackPanel Margin="30, 6">
+                        <ListView ItemsSource="{Binding XPath=./Version[@version\=\'1.0.221\']/*}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate >
+                                    <BulletDecorator>
+                                        <BulletDecorator.Bullet>
+                                            <Ellipse Height="5" Width="5" Fill="Black" />
+                                        </BulletDecorator.Bullet>
+                                        <TextBlock Text="{Binding XPath=text()}" Margin="8, 0, 0, 0"/>
+                                    </BulletDecorator>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+                </Expander>
+                <Expander Tag="1.0.219" IsExpanded="False" Header="New in 1.0.219">
                     <StackPanel Margin="30, 6">
                         <ListView ItemsSource="{Binding XPath=./Version[@version\=\'1.0.219\']/*}">
                             <ListView.ItemTemplate>
@@ -68,7 +100,7 @@
                         </ListView>
                     </StackPanel>
                 </Expander>
-                
+
                 <Expander Tag="1.0.212" IsExpanded="False" Header="New in 1.0.212">
                     <StackPanel Margin="30, 6">
                         <ListView ItemsSource="{Binding XPath=./Version[@version\=\'1.0.212\']/*}">
@@ -85,7 +117,7 @@
                         </ListView>
                     </StackPanel>
                 </Expander>
-                
+
 
                 <Expander Tag="1.0.208" IsExpanded="False" Header="New in 1.0.208">
                     <StackPanel>
@@ -124,6 +156,6 @@
 
             </StackPanel>
         </ScrollViewer>
-
+        
     </DockPanel>
 </mui:ModernWindow>
