--- a/DiGit/ResourceDictionary/MainResourceDictionary.xaml
+++ b/DiGit/ResourceDictionary/MainResourceDictionary.xaml
@@ -7,6 +7,8 @@
         <ResourceDictionary Source="DefaultControlsResourceDictionary.xaml"/>
         <ResourceDictionary Source="ThemesResourceDictionary.xaml" />
         <ResourceDictionary Source="NotificationResourceDictionary.xaml" />
+        <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.xaml" />
+        <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.Light.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
 </ResourceDictionary>
