--- a/DiGit/View/AboutView.xaml
+++ b/DiGit/View/AboutView.xaml
@@ -5,6 +5,7 @@
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                   xmlns:mui="http://firstfloorsoftware.com/ModernUI"
                   WindowStartupLocation="CenterScreen" 
+                  ShowInTaskbar="True"
                   mc:Ignorable="d"
                   Title="About DiGit" Width="561.088" Height="400.418">
 
