--- a/DiGit/View/UpdateView.xaml
+++ b/DiGit/View/UpdateView.xaml
@@ -5,10 +5,9 @@
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                   xmlns:mui="http://firstfloorsoftware.com/ModernUI"
                   xmlns:updates="clr-namespace:DiGit.Versioning"
-                  mc:Ignorable="d" 
-                  d:DesignHeight="300" d:DesignWidth="300"
+                  mc:Ignorable="d" d:DesignWidth="300"
                   Title="DiGit Update"
-                  Height="360"
+                  Height="388"
                   Width="360"
                   Style="{StaticResource BlankWindow}" 
                   WindowStartupLocation="CenterScreen" 
@@ -48,6 +47,9 @@
             <TextBlock Text="{Binding NewVersion}"/>
         </StackPanel>
 
+        <StatusBar DockPanel.Dock="Bottom">
+            <TextBlock Text="{Binding Status, Mode=OneWay}" ToolTip="{Binding Status}"/>
+        </StatusBar>
         <DockPanel DockPanel.Dock="Bottom" Margin="0,4" LastChildFill="False">
             <Button DockPanel.Dock="Left" Command="{Binding CheckUpdateCommand}">Check</Button>
             <Button DockPanel.Dock="Left" Command="{Binding UpdateCommand}" 
@@ -58,6 +60,7 @@
             <Button DockPanel.Dock="Right" Command="{Binding CloseCommand}" IsCancel="True">Close</Button>
         </DockPanel>
         <CheckBox DockPanel.Dock="Bottom" IsChecked="{Binding IsBetaUser}" Margin="0,4">Include beta versions</CheckBox>
+
 
         <GroupBox Header="What's new" Margin="0, 10" Padding="4">
             <ScrollViewer MinHeight="200" MinWidth="200" >
